fixed spacing and width of card creation box

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1005,9 +1005,9 @@ textarea {
       }
       textarea {
         position: relative;
-        width: calc(100% - 1em);
         min-height: 7em;
-        margin-top: 1em;
+        margin-top: 2.35em;
+        width: 39em;
       }
     }
 
